--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -14,22 +14,22 @@
   box-shadow: 1px 1px 1px rgba(0,0,0,.25);
 }
 .card-hidden {
-  background-color: #fff;
+  background-color: $hidden-color;
   color: #000;
 }
 .card-red {
-  background-color: red;
+  background-color: $red-color;
   color: #fff;
 }
 .card-blue {
-  background-color: blue;
+  background-color: $blue-color;
   color: #fff;
 }
 .card-neutral {
-  background-color: grey;
+  background-color: $neutral-color;
   color: #000;
 }
 .card-black {
-  background-color: #000;
+  background-color: $black-color;
   color: #fff;
 }
