--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,35 +1,58 @@
 @import '../../common';
 
+.board-row {
+  display: flex;
+  width: 99%;
+  margin: .5em auto;
+  justify-content: space-between;
+}
+
 .card {
-  display: inline-block;
-  padding: 10px 0;
-  width: calc(20% - .5em);
-  height: calc(20vh - .5em);
-  max-height: 140px;
+  box-shadow: 1px 1px 1px rgba(0,0,0,.25);
+  flex-basis: 19%;
   text-align: center;
-  border: 1px solid #f4f4f4;
+  padding: 1em 1em;
   border-radius: .25em;
   box-sizing: border-box;
-  margin: .25em;
-  box-shadow: 1px 1px 1px rgba(0,0,0,.25);
+  height: calc(20vh - 16px - 1em);
+  align-items: strech;
+  font-size: .5em;
 }
+
 .card-hidden {
   background-color: $hidden-color;
-  color: #000;
 }
 .card-red {
   background-color: $red-color;
-  color: #fff;
 }
 .card-blue {
   background-color: $blue-color;
-  color: #fff;
 }
 .card-neutral {
   background-color: $neutral-color;
-  color: #000;
 }
 .card-black {
   background-color: $black-color;
-  color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .card {
+    font-size: .75em;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .card {
+    font-size: 1em;
+  }
+}
+
+.cardText-container {
+  border-radius: .25em;
+  border: 1px solid rgba(0,0,0, .125);
+}
+.cardText {
+  background-color: #fff;
+  padding: .125em;
+  font-weight: bold;
 }
