--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -3,7 +3,7 @@
 .modal-container {
   box-sizing: border-box;
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.875);
     width: 100%;
     height: 100%;
     left: 0;
@@ -11,7 +11,7 @@
 }
 
 .modal-content {
-  background-color: $nav-bg-color;
+  background-color: #000;
   min-height: 150px;
   width: 100%;
     max-width: 400px;
