Add styling for Home

--- a/src/common.scss
+++ b/src/common.scss
@@ -2,8 +2,9 @@ $font-stack: Helvetica, sans-seif;
 $nav-bg-color: #212121;
 $nav-text-color: #fff;
 $disabled-color: #616161;
-$nav-link-hover-color: #bdbdbd;
-$nav-button-bg-color: #e0e0e0;
+$button-hover-color: #bdbdbd;
+$button-bg-color: #e0e0e0;
+$button-text-color: #000;
 $hidden-color: #fff8e1;
 $red-color: #f44336;
 $blue-color: #2196f3;
@@ -11,40 +12,65 @@ $neutral-color: #dce775;
 $black-color: #212121;
 $timer-font: 'Orbitron', sans-serif;
 $timer-color: #03a87c;
+$home-bg-color: #000;
+$home-text-color: #fff;
+$error-bg-color: #ffcdd2;
+$error-text-color: #b71c1c;
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	font-family: $font-stack;
-	margin: 0;
+  font-family: $font-stack;
+  margin: 0;
+  height: 100vh;
+}
+
+button {
+  background-color: $button-bg-color;
 }
 
 button:hover {
-	cursor: pointer;
+  cursor: pointer;
+}
+
+.button {
+  background-color: $button-bg-color;
+  color: $button-text-color;
+  text-decoration: none;
+  border-radius: .25em;
+  text-align: center;
+}
+
+.button:hover {
+  background-color: $button-hover-color;
 }
 
 .flex {
-	display: flex;
+  display: flex;
 }
 
 .flex-column {
-	flex-direction: column;
+  flex-direction: column;
 }
 
 .v-align-center {
-	align-items: center;
+  align-items: center;
 }
 
 .v-align-bottom {
-	align-items: flex-end;
+  align-items: flex-end;
 }
 
 .flex-100 {
-	flex-basis: 100%;
+  flex-basis: 100%;
 }
 
 .flex-50 {
-	flex-basis: 50%;
+  flex-basis: 50%;
+}
+
+#root {
+  height: 100%;
 }
