--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -48,7 +48,7 @@
   outline: 0;
 }
 .modal-button:hover {
-  color: $nav-link-hover-color;
+  color: $button-hover-color;
 }
 
 .modal-content-button-container {
