--- a/src/components/Timer/Timer.scss
+++ b/src/components/Timer/Timer.scss
@@ -22,7 +22,7 @@
 
 .timer-icon:not(.disabled):hover {
 	cursor: pointer;
-	color: $nav-link-hover-color;
+	color: $button-hover-color;
 }
 
 .timer-icon.disabled {
