--- a/src/common.scss
+++ b/src/common.scss
@@ -41,6 +41,7 @@ button:hover {
   text-decoration: none;
   border-radius: .25em;
   text-align: center;
+  display: inline-block;
 }
 
 .button:hover {
