Add settings for changing Timer

--- a/src/components/Game/Game.scss
+++ b/src/components/Game/Game.scss
@@ -32,3 +32,10 @@
 .nav-button:focus {
 	outline: 0;
 }
+
+.timer-settings {
+	margin-bottom: .25em;
+	input[type="number"] {
+		max-width: 50px;
+	}
+}
