--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -62,3 +62,9 @@
   font-weight: bold;
   font-size: 1.5em;
 }
+
+@media screen and (min-width: 768px) {
+  .cardText {
+    font-size: 1em;
+  }
+}
