--- a/src/components/Game/Game.scss
+++ b/src/components/Game/Game.scss
@@ -1,42 +1,15 @@
 @import '../../common';
 
-.nav-bar {
-	background-color: $nav-bg-color;
-	color: $nav-text-color;
-	padding: .25em 1em;
-	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
-	max-height: 75px;
-}
-
-.nav-bar > div {
-	-ms-flex-preferred-size: 30%;
-	    flex-basis: 30%;
-}
-
 .game-stats {
 	-webkit-box-pack: center;
 	    -ms-flex-pack: center;
 	        justify-content: center;
 	text-align: center;
+	width: 100%;
 }
 
-.nav-button {
-	font-size: 1.325em;
-	border-radius: .25em;
-	padding: 0 .125em;
-	margin: .425em;
-	border: 0;
-	background-color: $button-bg-color;
-}
-
-.nav-button:hover {
-	background-color: $button-hover-color;
-}
-
-.nav-button:focus {
-	outline: 0;
+.nav-settings {
+	width: 100%;
 }
 
 .timer-settings {
