--- a/src/common.scss
+++ b/src/common.scss
@@ -40,6 +40,10 @@ button:hover {
   cursor: pointer;
 }
 
+.height-100 {
+  height: 100%;
+}
+
 .button {
   background-color: $button-bg-color;
   color: $button-text-color;
