--- a/src/components/GameSettings/GameSettings.scss
+++ b/src/components/GameSettings/GameSettings.scss
@@ -1,1 +1,16 @@
 @import '../../common';
+
+.timer-settings {
+	margin-bottom: .25em;
+	input[type="number"] {
+		max-width: 50px;
+	}
+}
+
+.gametype-settings {
+	margin: 1em 0;
+
+	strong {
+		margin-bottom: .25em;
+	}
+}
